# wcpredict

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
scripts/: sync_data.py
traces/: 20260707-135359-Argentina-vs-Egypt-claude-fable-5.md  20260707-135656-Argentina-vs-Egypt-gpt-5.5.md  20260707-135800-Argentina-vs-Egypt-gemini-3.1-pro-preview.md  20260707-140151-Argentina-vs-Egypt-qwen3.7-max.md  20260707-140527-Argentina-vs-Egypt-glm-5.2.md  20260707-140753-Argentina-vs-Egypt-MiniMax-M3.md  20260707-141154-Argentina-vs-Egypt-deepseek-v4-pro.md  20260707-142225-Argentina-vs-Egypt-claude-opus-4-8.md  20260707-143352-Switzerland-vs-Colombia-claude-fable-5.md  20260707-143529-Switzerland-vs-Colombia-claude-opus-4-8.md  20260707-143816-Switzerland-vs-Colombia-gpt-5.5.md  20260707-144008-Switzerland-vs-Colombia-gemini-3.1-pro-preview.md  20260707-144339-Switzerland-vs-Colombia-qwen3.7-max.md  20260707-144655-Switzerland-vs-Colombia-glm-5.2.md  20260707-144920-Switzerland-vs-Colombia-MiniMax-M3.md  20260707-145203-Switzerland-vs-Colombia-deepseek-v4-pro.md  20260707-145617-Switzerland-vs-Colombia-kimi-k2.6.md  20260707-151453-Norway-vs-England-claude-fable-5.md  20260707-151620-Norway-vs-England-claude-opus-4-8.md  20260707-151828-Norway-vs-England-gpt-5.5.md  20260707-151954-Norway-vs-England-gemini-3.1-pro-preview.md  20260707-152307-Norway-vs-England-qwen3.7-max.md  20260707-152556-Norway-vs-England-glm-5.2.md  20260707-152736-Norway-vs-England-MiniMax-M3.md  20260707-153225-Norway-vs-England-deepseek-v4-pro.md  20260707-210032-France-vs-Morocco-gpt-5.5.md  (+55 more)
(+19 files in other folders)
