[project]
name = "wcpredict"
version = "0.1.0"
description = "World Cup 2026 match prediction agent (LangGraph + Claude)"
requires-python = ">=3.10"
dependencies = [
    "langchain-anthropic>=1.4.8",
    "langgraph>=1.2.7",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]

[tool.uv]
package = false
